# Random-Quote-generator-Random-Quote-generator

./: CMakeLists.txt  README.md
inc/: AngryHandler.h  AuthoAnwerHandler.h  AuthoFactory.h  AuthoHandler.h  AuthonticationDataBase.h  Colleage.h  Command.h  ConreteMediator.h  Console.h  ConsoleFactory.h  DataBase.h  Handlers.h  HappyHandler.h  Mediator.h  Memento.h  SadHandler.h  Screen.h  ScreenFactory.h  TXT.h  TXTFactory.h  private_lib.h
lib/: AngryHandler.cpp  AuthoAnwerHandler.cpp  AuthoFactory.cpp  AuthoHandler.cpp  AuthonticationDataBase.cpp  Colleage.cpp  Command.cpp  ConreteMediator.cpp  Console.cpp  ConsoleFactory.cpp  DataBase.cpp  Handlers.cpp  HappyHandler.cpp  Mediator.cpp  Memento.cpp  SadHandler.cpp  Screen.cpp  ScreenFactory.cpp  TXT.cpp  TXTFactory.cpp  private_lib.cpp
src/: Authontication.txt  Backup.txt  DataBase.txt  app.cpp
